@@ -1,3 +1,12 @@
+2010-10-08  Andoni Morales Alastruey  <amorales@flumotion.com>
+
+	reviewed by: Marc-André Lureau 
+
+	* flumotion/component/consumers/disker/disker.py:
+	Use the time zone time to name the first disker file, as it's done for
+	the following ones.
+	Close #1465
+
 2010-10-08  Josep Joan Ribas  <jribas@flumotion.com>
 
 	* flumotion/component/consumers/httpstreamer/httpstreamer.xml:
